# Chatterbox_AMDVulkan

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  requirements.txt
chatterbox-cpp/: CMakeLists.txt  README.md
chatterbox-cpp/src/: backend.cpp  backend.h  cfm_decoder.cpp  cfm_decoder.h  chatterbox.cpp  chatterbox.h  chatterbox_capi.cpp  chatterbox_capi.h  flow_encoder.cpp  flow_encoder.h  hift_vocoder.cpp  hift_vocoder.h  kaldi_fbank.cpp  kaldi_fbank.h  mel.cpp  mel.h  model.cpp  model.h  resample.cpp  resample.h  s3enc.cpp  s3enc.h  s3gen_mel.cpp  s3gen_mel.h  s3spk.cpp  s3spk.h  s3tok.cpp  s3tok.h  sampler.cpp  sampler.h  t3.cpp  t3.h  tokenizer.cpp  tokenizer.h  ve.cpp  ve.h  ve_mel.cpp  ve_mel.h  voice_pack.cpp  voice_pack.h  (+2 more)
chatterbox-cpp/tests/: campplus_fcm_debug.cpp  campplus_test.cpp  cfm_decoder_test.cpp  chatterbox_real_voice.cpp  chatterbox_smoke.cpp  flow_encoder_test.cpp  hift_vocoder_test.cpp  kaldi_fbank_test.cpp  load_gguf_smoke.cpp  mel_test.cpp  pipeline_smoke.cpp  resample_test.cpp  s3_encoder_test.cpp  s3_tokenizer_test.cpp  s3gen_mel_test.cpp  sampler_test.cpp  t3_forward_test.cpp  t3_generate_smoke.cpp  tokenizer_test.cpp  ve_forward_test.cpp  ve_mel_test.cpp  voice_pack_test.cpp
chatterbox-cpp/tools/: pack_voices.cpp
chatterbox-server/: Cargo.toml  build.rs  config.example.yaml
chatterbox-server/src/: audio.rs  ffi.rs  main.rs
chatterbox-server/web/: app.css  app.js  index.html
scripts/: README.md  convert_chatterbox_to_gguf.py  convert_s3gen_to_gguf.py  convert_ve_to_gguf.py  inspect_checkpoint.py  pack_voices.py  reference_campplus.py  reference_cfm_decoder.py  reference_flow_encoder.py  reference_hift_vocoder.py  reference_kaldi_fbank.py  reference_resampler.py  reference_s3_encoder.py  reference_s3_mel.py  reference_s3_tokenizer.py  reference_s3gen_mel.py  reference_t3_forward.py  reference_ve_forward.py  reference_ve_mel.py  summarize_checkpoint.py  tokenizer_parity_dump.py  ui_screenshots.py  ui_smoke.py  ui_walkthrough.py  verify_gguf.py
tests/: campplus_reference.json  cfm_decoder_reference.json  flow_encoder_reference.json  hift_vocoder_reference.json  kaldi_fbank_reference.json  resampler_reference.json  s3_encoder_reference.json  s3_mel_reference.json  s3_tokenizer_reference.json  s3gen_mel_reference.json  t3_reference.json  tokenizer_groundtruth.json  tokenizer_metadata.json  ve_mel_reference.json  ve_reference.json
